[project]
name = "fob-movimentacao-bancaria"
package-mode = false
version = "0.1.0"
description = "Projeto do desafio 'Criando sua API bancária com FastAPI'"
authors = [
    {name = "felipebart10",email = "felipebartocci@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.12.0,<26.0.0)",
    "pylint (>=4.0.4,<5.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "alembic (>=1.17.2,<2.0.0)"
]
